Issue IMCMS-605 Image editor - Not responsive, IMCMS-673 Improve the view of image editor, IMCMS-676 Small fixes in image editor: - Minor changes

--- a/src/main/webapp/imcms/css/image_editor/imcms-image_editor.css
+++ b/src/main/webapp/imcms/css/image_editor/imcms-image_editor.css
@@ -5,8 +5,6 @@
 }
 
 .image-editor-info {
-    width: 45%;
-    margin-right: 5%;
     display: inline-flex;
     text-transform: lowercase;
     justify-content: flex-end;
